Summary of important user-visible changes for generate_html 0.1.9:
------------------------------------------------------------------

 ** Better-looking "News" and "Package documentation" links.


Summary of important user-visible changes for generate_html 0.1.8:
------------------------------------------------------------------

 ** Bug fixes

    o html_help_text.m, texi2html.m: Fix a bug that was the cause of unmatched
      </p> tags in the HTML output.

    o get_html_options.m: Fix default header (add !DOCTYPE, charset, etc.)
      and Octave Forge header (unordered <ul> </ul> lists are not allowed to be
      nested in <p> </p> blocks).

** Other changes

    o html_help_text.m: Now entirely based on texi2html.m

    o texi2html.m: Use <dt class="deftypefn"> </dt> blocks both with TexInfo 4.x
      and with TexInfo 5.x.


Summary of important user-visible changes for generate_html 0.1.7:
------------------------------------------------------------------

 ** Bug fixes

    o Omit the "News" link if there is no NEWS file, instead of generating an
      error (the NEWS file is optional, according to the manual)

    o Fix broken links on the NEWS, COPYING and overview pages (the link that
      was supposed to point to the index.html of the package)

    o Protect symbols <, > and & by replacing them with the corresponding HTML
      entity (&lt;, &gt; and &amp;) everywhere it makes sense

    o get_txi_files.m: Update the list of ignored *.texi files

    o generate_package_html.m: Let email addresses appear if they exist in
      DESCRIPTION (they were previously hidden because of the < > delimiters)

    o generate_package_html.m: Fix anchor names

    o html_help_text.m: Hide figures only if gnuplot is in use (see bug #33180)

    o html_help_text.m: Prevent empty <pre> </pre> blocks (bug #44451)

 ** New features

    o Introduce a new %charset variable for header template, which defaults to